--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Startup</title>
+    <title>Thank you, SMC.</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
 
     <!-- Note that the below Bootstrap file is a specific version. If you grab the most
     current from Bootstrap website, you will see the button grow transition being a lot faster
@@ -27,7 +27,7 @@
         <section class="text-center col-12">
           <hr>
           <a href="https://mailchi.mp/ca116162b5dd/startup-meow">
-            <button class="btn btn-primary btn-xl">Find out more</button>
+            <button class="btn btn-primary btn-xl">Click here to subscribe</button>
           </a>
         </section>
       </div>
