--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <a href="https://mailchi.mp/ca116162b5dd/startup-meow">
+          <a href="https://quiapochurch.com.ph/">
             <button class="btn btn-primary btn-xl">Click here to subscribe</button>
           </a>
         </section>
