--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- <h1>Hellllooooo Meow</h1> -->
-    <div class="container d-flex align-items-center h-100 justify-content-center">
+    <div class="container d-flex align-items-center h-75 justify-content-center">
       <div class="row">
         <header class="text-center col-12">
           <h1 class="text-uppercase"><strong>I appreciate the opportunity I had here to grow in my career and be a part of the team. I'll never forget the experiences I had working here. Wishing you all great success. 千里之行，始于足下。</strong></h1>  
@@ -27,7 +27,7 @@
         <section class="text-center col-12">
           <hr>
           <a href="https://quiapochurch.com.ph/">
-            <button class="btn btn-primary btn-xl">Click here to subscribe</button>
+            <button class="btn btn-primary btn-sm">Click here to subscribe</button>
           </a>
         </section>
       </div>
