--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container d-flex align-items-center h-75 justify-content-center">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>I appreciate the opportunity I had here to grow in my career and be a part of the team. I'll never forget the experiences I had working here. Wishing you all great success. 千里之行，始于足下。</strong></h1>  
+          <h1 class="text-capitalize"><strong>I appreciate the opportunity I had here to grow in my career and be a part of the team. I'll never forget the experiences I had working here. Wishing you all great success. 千里之行，始于足下。</strong></h1>  
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
